third_party/move/move-compiler-v2/tests/bytecode-generator/bug_16543_fv_wrapper_pack.move
module 0xc0ffee::m {
    package struct Lazy(||) has drop;

}

module 0xc0ffee::m_friend {
    friend 0xc0ffee::n;
    friend struct Lazy(||) has drop;

}

module 0xc0ffee::n {
    public fun test(): 0xc0ffee::m::Lazy {
        || {}
    }

    public fun test_friend(): 0xc0ffee::m_friend::Lazy {
        || {}
    }
}
